Fix St James designs column display on mobile

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -60,6 +60,7 @@
 
     .jimmiesGallery>div {
         column-count: 2 !important;
+        column-width: 150px !important;
         column-gap: 8px !important;
     }
 }
